Fix layout spacing

--- a/templates/layout/layout--uni-1col/layout--uni-1col.scss
+++ b/templates/layout/layout--uni-1col/layout--uni-1col.scss
@@ -1,7 +1,7 @@
 @use 'sass-utils' as *;
 
 .layout--uni-1col {
-  & > .region > .paragraph {
+  & > .region > * {
     @include paragraph-margin;
 
     &:first-of-type {
