--- a/templates/layout/layout--uni-2col/layout--uni-2col.scss
+++ b/templates/layout/layout--uni-2col/layout--uni-2col.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  & > .region > .paragraph {
+  & > .region > * {
     @include paragraph-margin;
 
     @include above($md) {
