--- a/templates/layout/layout--uni-3col/layout--uni-3col.scss
+++ b/templates/layout/layout--uni-3col/layout--uni-3col.scss
@@ -12,7 +12,7 @@
     gap: 60px;
   }
 
-  & > .region > .paragraph {
+  & > .region > * {
     @include paragraph-margin;
 
     @include above($sm) {
